feat(ledger): add offset pagination to transactions endpoint
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>